# api/src/controllers/calendar.js
@@ -1,6 +1,7 @@
 'use strict';
 
-const request = require('superagent');
+const https = require('https'),
+      qs = require('querystring');
 
 const FIELDS = ['start', 'location', 'summary', 'description'];
 
@@ -11,37 +12,51 @@ const FIELDS = ['start', 'location', 'summary', 'description'];
 class CalendarHandler {
     constructor(config) {
         this.calId = config.GOOGLE_CAL_ID;
-        this.url = 'https://www.googleapis.com/calendar/v3/calendars/' +
-            this.calId + '/events';
+        this.host = 'www.googleapis.com';
+        this.path = '/calendar/v3/calendars/' + this.calId + '/events';
         this.apiKey = config.GOOGLE_API_KEY;
     }
 
     handle(req, context) {
-        request
-            .get(this.url)
-            .query({
-                orderBy: 'startTime',
-                singleEvents: 'True',
-                maxResults: '20',
-                timeMin: new Date().toISOString(),
-                key: this.apiKey
-            })
-            .end((err, res) => {
-                if (err) {
-                    console.log(err);
-                    return context.done('ERR_INTERNAL_ERROR');
-                }
+        const query = qs.stringify({
+            orderBy: 'startTime',
+            singleEvents: 'True',
+            maxResults: '20',
+            timeMin: new Date().toISOString(),
+            key: this.apiKey
+        });
 
-                // Filter the event to just the required fields
+        const params = {
+            host: this.host,
+            path: this.path + '?' + query,
+            headers: {
+                'Accept': 'application/json'
+            }
+        };
+
+        let r = https.request(params, (res) => {
+            if (res.statusCode !== 200) {
+                return context.done('ERR_INTERNAL_ERROR');
+            }
+            let body = '';
+            res.on('data', (chunk) => {
+                body += chunk;
+            });
+
+            res.on('end', () => {
+                let content = JSON.parse(body);
                 let ev = {calId: this.calId};
-                if (res.body.items[0]) {
+                if (content.items[0]) {
                     FIELDS.forEach((f) => {
-                        ev[f] = res.body.items[0][f];
+                        ev[f] = content.items[0][f];
                     });
                 }
-
                 context.done(null, {data: ev});
             });
+        });
+
+        r.on('error', () => context.done('ERR_INTERNAL_ERROR'));
+        r.end();
     }
 }
 
