# deploy/templates/swagger.yml
@@ -63,6 +63,56 @@ paths:
                                     "code": 500,
                                     "message": "ERR_INTERNAL_ERROR"
                                 }
+    '/posts':
+        get:
+            produces:
+                - 'application/json'
+            responses:
+                200:
+                    description: 'OK'
+                400:
+                    description: 'ERR_BAD_REQUEST'
+                500:
+                    description: 'ERR_INTERNAL_ERROR'
+            'x-amazon-apigateway-integration':
+                type: 'aws'
+                uri: 'arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/${lambda_arn}/invocations'
+                httpMethod: 'POST'
+                credentials: '${iam_invoke_arn}'
+                passthroughBehavior: 'never'
+                requestTemplates:
+                    'application/json': |
+                      {
+                          "route": "posts",
+                          "body": {}
+                      }
+                responses:
+                    'default':
+                        statusCode: '200'
+                        responseTemplates:
+                            'application/json': |
+                                {
+                                    "code": 200,
+                                    "message": "OK",
+                                    "data": $input.json('$.data')
+                                }
+                    'ERR_BAD_REQUEST.*':
+                        statusCode: '400'
+                        responseTemplates:
+                            'application/json': |
+                                {
+                                    "code": 400,
+                                    "message": "ERR_BAD_REQUEST",
+                                    "detail": $input.json('$.errorMessage')
+                                }
+                    'ERR_INTERNAL_ERROR':
+                        statusCode: '500'
+                        responseTemplates:
+                            'application/json': |
+                                {
+                                    "code": 500,
+                                    "message": "ERR_INTERNAL_ERROR"
+                                }
     '/petition':
         post:
             produces:
